--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-	"deploy": "(cd frontend && npm install && npm run build) && npm install && node server.js"
+	"deploy": "(cd frontend && sudo npm install && npm run build) && sudo npm install && node server.js"
   },
   "repository": {
     "type": "git",
