--- a/package.json
+++ b/package.json
@@ -1,20 +1,43 @@
 {
-  "name": "mango-backend",
+  "name": "mango-app",
   "version": "0.0.1",
+  "private": true,
   "description": "A MERN Web Application that helps you maintain your greenhouse",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-	"deploy": "(cd frontend && sudo npm install && npm run build) && sudo npm install && node server.js"
+    "start": "react-scripts start & nodemon server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "deploy": "npm run build && node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devon-gadarowski/Mango-Web-App.git"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^10.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
-  }
+    "nodemon": "^2.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.4.0",
+    "typescript": "^3.8.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:5000"
 }
