--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A MERN Web Application that helps you maintain your greenhouse",
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start & nodemon server.js",
+    "start": "react-scripts start > /dev/null & nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "deploy": "npm run build && node server.js"
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
