--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "module1": "0.0.0",
     "mongoose": "^5.9.4",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
