--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mango-app",
   "version": "0.0.1",
-  "private": true, 
+  "private": true,
   "description": "A MERN Web Application that helps you maintain your greenhouse",
   "main": "server.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "^3.4.0",
     "typescript": "^3.8.2",
+    "update": "^0.7.4",
     "validator": "^12.2.0"
   },
   "browserslist": {
@@ -45,5 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "module": "^1.2.5"
+  }
 }
