--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "swagger-ui": "^3.25.0",
+    "swagger-ui-express": "^4.1.4",
     "typescript": "^3.8.2",
     "validator": "^12.2.0"
   },
