--- a/.ebextensions/https-instance.config
+++ b/.ebextensions/https-instance.config
@@ -4,8 +4,10 @@ files:
     owner: root
     group: root
     content: |
-      # HTTPS server
-      # HTTP redirect
+      upstream nodejs {
+        server 127.0.0.1:8081;
+        keepalive 256;
+      }
 
       server {
           listen 80;
