--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
