--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chartjs": "^0.3.24",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
